fixed alignment issue

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -107,7 +107,7 @@ div.right {
 div.infoPanel {
 	position: fixed;
 	float: left;
-	margin-top: 25px;
+	margin-top: 19px;
 	margin-left: 30px;
 	min-height: 250px;
 	width: 320px;
